<resources>
    <string name="app_name">Application SQAK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="se_connecter">Se connecter</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="en_invit">En invité</string>
    <string name="ou">ou</string>
    <string name="travaillons_ensemble_pour_l_avenir">Travaillons ensemble pour l\'avenir...</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="logosqak">logoSqak</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="bouton_retour">Bouton retour</string>
    <string name="code">•••••</string>
    <string name="confirmer">Confirmer</string>
    <string name="renvoyer_le_code">Renvoyer le code</string>
    <string name="pr_nom">Prénom:</string>
    <string name="nom">Nom:</string>
    <string name="courriel">Courriel:</string>
    <string name="num_ro_de_t_l_phone">Numéro de Téléphone:</string>
    <string name="mot_de_passe">Mot de passe:</string>
    <string name="confirmation_du_mot_de_passe">Confirmation du mot de passe:</string>
    <string name="exemple_email">exemple@abc.com</string>
    <string name="mdp_hint">••••••••</string>
    <string name="assister_l_v_nement_comme">Assister à l\'événement comme</string>
    <string name="b_n_vole">Bénévole</string>
    <string name="invit">Invité</string>
    <string name="commentaires">Commentaires</string>
    <string name="publier">Publier</string>
    <string name="v_nements">Événements</string>
    <string name="mes_inscriptions">Mes Inscriptions</string>
    <string name="date">Date</string>
    <string name="benevole">Benevole</string>
    <string name="tout">Tout</string>
    <string name="visiteur">Visiteur</string>
    <string name="recherche">Recherche</string>

    <string-array name="event_dates">
            <item>Date</item>
            <item>Today</item>
            <item>Tomorrow</item>
            <item>This Week</item>
            <item>This Month</item>
        </string-array>

    <string-array name="event_locations">
        <item>Lieux</item>
        <item>Montreal</item>
        <item>Laval</item>
        <item>Quebec</item>
        <item>Brossard</item>
    </string-array>

    <string-array name="event_etat">
        <item>Etat</item>
        <item>Complet</item>
        <item>Disponible</item>
    </string-array>



</resources>