<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary"
    android:orientation="vertical"
    android:scrollbars="none">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFiltreTout"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/accent3"
                android:text="@string/tout"
                android:textSize="16sp"
                app:cornerRadius="15dp" />

            <Spinner
                android:id="@+id/spLocation"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/event_filter_custom_spinner"
                android:minWidth="95dp"
                android:popupBackground="@color/textbtn"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnfiltre"
                android:text="@string/date"
                android:textSize="16sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnFiltreVisiteur"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnfiltre"
                android:text="@string/visiteur"
                android:textSize="16sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnFiltreBenevole"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnfiltre"
                android:text="@string/benevole"
                app:cornerRadius="15dp" />

            <Spinner
                android:id="@+id/spEtat"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/event_filter_custom_spinner"
                android:minWidth="95dp"
                android:popupBackground="@color/textbtn"
                android:spinnerMode="dialog"
                android:textAlignment="center" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/searchBar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/barrerecherche"
            android:hint="Rechercher..."
            android:minWidth="100dp"
            android:paddingLeft="6dp" />

        <Button
            android:id="@+id/btnRecherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/accent2"
            android:maxWidth="50dp"
            android:minWidth="140dp"
            android:text="@string/recherche" />

    </LinearLayout>

</LinearLayout>

